--- a/src/css/preset.less
+++ b/src/css/preset.less
@@ -9,7 +9,15 @@
 .show(){
   display: block;
 }
-
+.pointer(){
+  cursor: pointer;
+}
+.transY(@n:-50%){
+  transform:translateY(@n);
+}
+.transX(@n:-50%){
+  transform:translateX(@n);
+}
 
 // 绝对定位
 // 占父元素100%宽高
