--- a/src/css/sprite.less
+++ b/src/css/sprite.less
@@ -111,27 +111,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @lexuslogo-image: '../img/sprite.png';
 @lexuslogo: 1526px 260px -1526px -260px 222px 40px 1820px 648px '../img/sprite.png' lexuslogo;
 @next-name: next;
-@next-x: 801px;
+@next-x: 871px;
 @next-y: 420px;
-@next-offset-x: -801px;
+@next-offset-x: -871px;
 @next-offset-y: -420px;
 @next-width: 70px;
 @next-height: 70px;
 @next-total-width: 1820px;
 @next-total-height: 648px;
 @next-image: '../img/sprite.png';
-@next: 801px 420px -801px -420px 70px 70px 1820px 648px '../img/sprite.png' next;
+@next: 871px 420px -871px -420px 70px 70px 1820px 648px '../img/sprite.png' next;
 @prev-name: prev;
-@prev-x: 871px;
+@prev-x: 801px;
 @prev-y: 420px;
-@prev-offset-x: -871px;
+@prev-offset-x: -801px;
 @prev-offset-y: -420px;
 @prev-width: 70px;
 @prev-height: 70px;
 @prev-total-width: 1820px;
 @prev-total-height: 648px;
 @prev-image: '../img/sprite.png';
-@prev: 871px 420px -871px -420px 70px 70px 1820px 648px '../img/sprite.png' prev;
+@prev: 801px 420px -801px -420px 70px 70px 1820px 648px '../img/sprite.png' prev;
 @procedure-name: procedure;
 @procedure-x: 1601px;
 @procedure-y: 172px;
@@ -165,6 +165,17 @@ At the bottom of this section, we provide information about the spritesheet itse
 @sohu-total-height: 648px;
 @sohu-image: '../img/sprite.png';
 @sohu: 995px 353px -995px -353px 79px 40px 1820px 648px '../img/sprite.png' sohu;
+@swrj-name: swrj;
+@swrj-x: 1320px;
+@swrj-y: 233px;
+@swrj-offset-x: -1320px;
+@swrj-offset-y: -233px;
+@swrj-width: 47px;
+@swrj-height: 26px;
+@swrj-total-width: 1820px;
+@swrj-total-height: 648px;
+@swrj-image: '../img/sprite.png';
+@swrj: 1320px 233px -1320px -233px 47px 26px 1820px 648px '../img/sprite.png' swrj;
 @title-name: title;
 @title-x: 0px;
 @title-y: 0px;
@@ -201,7 +212,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 1820px;
 @spritesheet-height: 648px;
 @spritesheet-image: '../img/sprite.png';
-@spritesheet-sprites: @asfc @award-setting @award1 @award2 @cansai @car @classfication @dzsy @lexuslogo @next @prev @procedure @require @sohu @title @upload @wrjlogo;
+@spritesheet-sprites: @asfc @award-setting @award1 @award2 @cansai @car @classfication @dzsy @lexuslogo @next @prev @procedure @require @sohu @swrj @title @upload @wrjlogo;
 @spritesheet: 1820px 648px '../img/sprite.png' @spritesheet-sprites;
 
 /*
