--- a/src/css/index.less
+++ b/src/css/index.less
@@ -18,6 +18,8 @@
 
 .carousel_box{
 	width: 100%;
+	// max-width: 1800px;
+	// margin:0 auto;
 	height: 652px;
 	position: relative;
 	overflow: hidden;
@@ -27,24 +29,34 @@
 		position: relative;
 	}
 
-	ul{
+	.carousels{
 		width: 200%;
 		height: 100%;
 		overflow: hidden;
-		li{
+		&>li{
 			width: 50%;
 			height:100%;
 			position: relative;
 			float: left;
 			overflow: hidden;
 			img{
-				// width: 100%;
+				width: 100%;
 				height: 100%;
 				position: absolute;
-				left: 50%;
-				.transX();
+				// top:-5%;
+				// left: -5%;
+				// .transX();
 			}
 			display: inline-block;
+		}
+	}
+
+	.scene{
+		width: 100%;
+		height: 100%;
+		li{
+			width: 100%;
+			height: 100%;
 		}
 	}
 
@@ -81,6 +93,15 @@
 		height: 100%;
 		max-width: 1100px;
 		text-align: center;
+
+		.swrj{
+			.sprite(@swrj);
+			display: inline-block;
+			vertical-align: middle;
+		}
+		li:first-child{
+			width: 47px;
+		}
 
 		li{
 			display: inline-block;
